# Euclidean

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt
.github/workflows/: continuous-integration.yml
benchmarks/: VectorBenchmark.cpp
benchmarks/euclidean/: VectorBenchmark.cpp
doc/: Tensors for Beginners.txt
example/src/: Main.cpp
include/euclidean/: Array.hpp  Assert.hpp  Definitions.hpp  Dimension.hpp  Field.hpp  Functions.hpp  Iterator.hpp  Matrix.hpp  Tensor.hpp  Transformation.hpp  Variance.hpp  Vector.hpp
include/euclidean/types/: Covector.hpp  Matrix.hpp  Scalar.hpp  Vector.hpp
include/euclidian/: Functions.hpp  Matrix.hpp  Vector.hpp
src/: Main.cpp
tests/: VectorTest.cpp
tests/euclidean/: Assertions.hpp  Field.cpp  FunctionsTest.cpp  Interpolation.cpp  Matrix.cpp  MatrixTest.cpp  Tensor.cpp  Transformation.cpp  Vector.cpp  VectorTest.cpp
tests/euclidian/: Assertions.cpp  Assertions.hpp  FunctionsTest.cpp  MatrixTest.cpp  VectorTest.cpp
